--- a/src/output.css
+++ b/src/output.css
@@ -15,8 +15,10 @@
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
+    --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-700: oklch(37.3% 0.034 259.733);
+    --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -206,9 +208,6 @@
   .top-\[260px\] {
     top: 260px;
   }
-  .right-0 {
-    right: calc(var(--spacing) * 0);
-  }
   .right-\[50px\] {
     right: 50px;
   }
@@ -218,23 +217,8 @@
   .left-\[50\%\] {
     left: 50%;
   }
-  .-z-0 {
-    z-index: calc(0 * -1);
-  }
-  .-z-10 {
-    z-index: calc(10 * -1);
-  }
-  .-z-30 {
-    z-index: calc(30 * -1);
-  }
-  .z-0 {
-    z-index: 0;
-  }
   .z-30 {
     z-index: 30;
-  }
-  .z-\[-30px\] {
-    z-index: -30px;
   }
   .z-\[1000\] {
     z-index: 1000;
@@ -248,20 +232,8 @@
   .mx-1 {
     margin-inline: calc(var(--spacing) * 1);
   }
-  .mx-5 {
-    margin-inline: calc(var(--spacing) * 5);
-  }
-  .my-2 {
-    margin-block: calc(var(--spacing) * 2);
-  }
-  .my-32 {
-    margin-block: calc(var(--spacing) * 32);
-  }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
-  }
-  .mt-\[1\] {
-    margin-top: 1;
   }
   .mt-\[1rem\] {
     margin-top: 1rem;
@@ -287,9 +259,6 @@
   .mr-\[1rem\] {
     margin-right: 1rem;
   }
-  .mr-\[2rem\] {
-    margin-right: 2rem;
-  }
   .mr-\[10px\] {
     margin-right: 10px;
   }
@@ -299,9 +268,6 @@
   .mb-\[2rem\] {
     margin-bottom: 2rem;
   }
-  .mb-\[5px\] {
-    margin-bottom: 5px;
-  }
   .mb-\[10px\] {
     margin-bottom: 10px;
   }
@@ -310,9 +276,6 @@
   }
   .mb-\[30px\] {
     margin-bottom: 30px;
-  }
-  .mb-\[px\] {
-    margin-bottom: px;
   }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
@@ -338,9 +301,6 @@
   .ml-\[15px\] {
     margin-left: 15px;
   }
-  .ml-\[20px\] {
-    margin-left: 20px;
-  }
   .ml-\[280px\] {
     margin-left: 280px;
   }
@@ -365,9 +325,6 @@
   .w-5 {
     width: calc(var(--spacing) * 5);
   }
-  .w-\[50px\] {
-    width: 50px;
-  }
   .w-\[75px\] {
     width: 75px;
   }
@@ -376,9 +333,6 @@
   }
   .w-\[100\%\] {
     width: 100%;
-  }
-  .w-\[100px\] {
-    width: 100px;
   }
   .w-\[200px\] {
     width: 200px;
@@ -392,29 +346,14 @@
   .w-\[320px\] {
     width: 320px;
   }
-  .w-\[350px\] {
-    width: 350px;
-  }
-  .w-\[400px\] {
-    width: 400px;
-  }
-  .w-\[px\] {
-    width: px;
-  }
   .w-screen {
     width: 100vw;
   }
   .max-w-\[600px\] {
     max-width: 600px;
   }
-  .max-w-\[1000px\] {
-    max-width: 1000px;
-  }
   .max-w-\[1200px\] {
     max-width: 1200px;
-  }
-  .max-w-\[12000px\] {
-    max-width: 12000px;
   }
   .flex-shrink {
     flex-shrink: 1;
@@ -429,9 +368,6 @@
     --tw-translate-x: -50%;
     --tw-translate-y: -50%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .cursor-pointer {
-    cursor: pointer;
   }
   .resize {
     resize: both;
@@ -460,9 +396,6 @@
   .overflow-hidden {
     overflow: hidden;
   }
-  .rounded-\[1px\] {
-    border-radius: 1px;
-  }
   .rounded-\[5px\] {
     border-radius: 5px;
   }
@@ -470,10 +403,6 @@
     border-radius: 10px;
   }
   .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
-  .border-1 {
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
@@ -488,10 +417,6 @@
   .border-\[2px\] {
     border-style: var(--tw-border-style);
     border-width: 2px;
-  }
-  .border-t-1 {
-    border-top-style: var(--tw-border-style);
-    border-top-width: 1px;
   }
   .border-t-\[1px\] {
     border-top-style: var(--tw-border-style);
@@ -514,6 +439,12 @@
   .border-gray-200 {
     border-color: var(--color-gray-200);
   }
+  .border-gray-500 {
+    border-color: var(--color-gray-500);
+  }
+  .border-gray-800 {
+    border-color: var(--color-gray-800);
+  }
   .border-white {
     border-color: var(--color-white);
   }
@@ -522,9 +453,6 @@
   }
   .bg-\[\#FEE715\] {
     background-color: #FEE715;
-  }
-  .bg-amber-50 {
-    background-color: var(--color-amber-50);
   }
   .bg-black {
     background-color: var(--color-black);
@@ -602,9 +530,6 @@
   .px-\[5rem\] {
     padding-inline: 5rem;
   }
-  .px-\[10px\] {
-    padding-inline: 10px;
-  }
   .px-\[10rem\] {
     padding-inline: 10rem;
   }
@@ -616,12 +541,6 @@
   }
   .px-\[60px\] {
     padding-inline: 60px;
-  }
-  .px-\[rem\] {
-    padding-inline: rem;
-  }
-  .py-2 {
-    padding-block: calc(var(--spacing) * 2);
   }
   .py-\[1rem\] {
     padding-block: 1rem;
@@ -644,30 +563,11 @@
   .py-\[10rem\] {
     padding-block: 10rem;
   }
-  .py-\[100rem\] {
-    padding-block: 100rem;
-  }
-  .pt-12 {
-    padding-top: calc(var(--spacing) * 12);
-  }
-  .pt-\[1rem\] {
-    padding-top: 1rem;
-  }
-  .pt-\[2rem\] {
-    padding-top: 2rem;
-  }
   .pt-\[5rem\] {
     padding-top: 5rem;
   }
-  .pt-\[5rme\] {
-    padding-top: 5rme;
-  }
   .text-center {
     text-align: center;
-  }
-  .text-4xl {
-    font-size: var(--text-4xl);
-    line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
   .text-sm {
     font-size: var(--text-sm);
@@ -701,9 +601,6 @@
   .text-\[4rem\] {
     font-size: 4rem;
   }
-  .text-\[5rem\] {
-    font-size: 5rem;
-  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -720,10 +617,6 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
-  .tracking-tighter {
-    --tw-tracking: var(--tracking-tighter);
-    letter-spacing: var(--tracking-tighter);
-  }
   .text-\[\#101820\] {
     color: #101820;
   }
@@ -735,6 +628,9 @@
   }
   .text-blue-600 {
     color: var(--color-blue-600);
+  }
+  .text-gray-500 {
+    color: var(--color-gray-500);
   }
   .text-gray-600 {
     color: var(--color-gray-600);
@@ -794,6 +690,11 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
+  .transition-shadow {
+    transition-property: box-shadow;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
   .duration-300 {
     --tw-duration: 300ms;
     transition-duration: 300ms;
@@ -813,13 +714,6 @@
     &:hover {
       @media (hover: hover) {
         border-bottom-left-radius: 20px;
-      }
-    }
-  }
-  .hover\:bg-\[\#19293a\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #19293a;
       }
     }
   }
@@ -844,13 +738,6 @@
       }
     }
   }
-  .hover\:bg-amber-200 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-amber-200);
-      }
-    }
-  }
   .hover\:bg-gray-50 {
     &:hover {
       @media (hover: hover) {
@@ -862,20 +749,6 @@
     &:hover {
       @media (hover: hover) {
         color: #FEE715;
-      }
-    }
-  }
-  .hover\:text-black {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-black);
-      }
-    }
-  }
-  .hover\:opacity-50 {
-    &:hover {
-      @media (hover: hover) {
-        opacity: 50%;
       }
     }
   }
@@ -891,6 +764,14 @@
       @media (hover: hover) {
         --tw-shadow-alpha: 20%;
         --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, oklab(from rgb(0 0 0 / 0.1) l a b / 20%)), 0 8px 10px -6px var(--tw-shadow-color, oklab(from rgb(0 0 0 / 0.1) l a b / 20%));
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+      }
+    }
+  }
+  .hover\:shadow-md {
+    &:hover {
+      @media (hover: hover) {
+        --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
         box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
       }
     }
@@ -923,6 +804,16 @@
   .active\:opacity-70 {
     &:active {
       opacity: 70%;
+    }
+  }
+  .max-\[1310px\]\:text-\[1\.20rem\] {
+    @media (width < 1310px) {
+      font-size: 1.20rem;
+    }
+  }
+  .max-\[1310px\]\:text-\[1rem\] {
+    @media (width < 1310px) {
+      font-size: 1rem;
     }
   }
   .max-\[700px\]\:hidden {
@@ -968,24 +859,6 @@
   .max-lg\:grid-cols-1 {
     @media (width < 64rem) {
       grid-template-columns: repeat(1, minmax(0, 1fr));
-    }
-  }
-  .sm\:text-5xl {
-    @media (width >= 40rem) {
-      font-size: var(--text-5xl);
-      line-height: var(--tw-leading, var(--text-5xl--line-height));
-    }
-  }
-  .md\:text-6xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-6xl);
-      line-height: var(--tw-leading, var(--text-6xl--line-height));
-    }
-  }
-  .lg\:text-7xl\/none {
-    @media (width >= 64rem) {
-      font-size: var(--text-7xl);
-      line-height: 1;
     }
   }
 }
@@ -1058,10 +931,6 @@ body {
   initial-value: 100%;
 }
 @property --tw-font-weight {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-tracking {
   syntax: "*";
   inherits: false;
 }
@@ -1196,7 +1065,6 @@ body {
       --tw-gradient-via-position: 50%;
       --tw-gradient-to-position: 100%;
       --tw-font-weight: initial;
-      --tw-tracking: initial;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
