--- a/src/output.css
+++ b/src/output.css
@@ -10,6 +10,7 @@
     --color-amber-50: oklch(98.7% 0.022 95.277);
     --color-amber-200: oklch(92.4% 0.12 95.746);
     --color-green-600: oklch(62.7% 0.194 149.214);
+    --color-teal-400: oklch(77.7% 0.152 181.912);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-violet-700: oklch(49.1% 0.27 292.581);
     --color-gray-50: oklch(98.5% 0.002 247.839);
@@ -193,6 +194,9 @@
   }
 }
 @layer utilities {
+  .invisible {
+    visibility: hidden;
+  }
   .fixed {
     position: fixed;
   }
@@ -262,6 +266,15 @@
   .mr-\[1rem\] {
     margin-right: 1rem;
   }
+  .mr-\[2rem\] {
+    margin-right: 2rem;
+  }
+  .mr-\[5px\] {
+    margin-right: 5px;
+  }
+  .mr-\[8px\] {
+    margin-right: 8px;
+  }
   .mr-\[10px\] {
     margin-right: 10px;
   }
@@ -313,6 +326,9 @@
   .grid {
     display: grid;
   }
+  .hidden {
+    display: none;
+  }
   .inline-block {
     display: inline-block;
   }
@@ -336,6 +352,9 @@
   }
   .w-\[100\%\] {
     width: 100%;
+  }
+  .w-\[100px\] {
+    width: 100px;
   }
   .w-\[200px\] {
     width: 200px;
@@ -372,8 +391,14 @@
     --tw-translate-y: -50%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
+  .cursor-pointer {
+    cursor: pointer;
+  }
   .resize {
     resize: both;
+  }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -389,6 +414,9 @@
   }
   .justify-between {
     justify-content: space-between;
+  }
+  .gap-\[1rem\] {
+    gap: 1rem;
   }
   .gap-\[2rem\] {
     gap: 2rem;
@@ -424,6 +452,10 @@
   .border-t-\[1px\] {
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
+  }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
   }
   .border-b-\[1px\] {
     border-bottom-style: var(--tw-border-style);
@@ -532,6 +564,9 @@
   }
   .px-\[5rem\] {
     padding-inline: 5rem;
+  }
+  .px-\[10px\] {
+    padding-inline: 10px;
   }
   .px-\[10rem\] {
     padding-inline: 10rem;
@@ -644,6 +679,9 @@
   .text-green-600 {
     color: var(--color-green-600);
   }
+  .text-teal-400 {
+    color: var(--color-teal-400);
+  }
   .text-transparent {
     color: transparent;
   }
@@ -655,6 +693,9 @@
   }
   .underline {
     text-decoration-line: underline;
+  }
+  .opacity-0 {
+    opacity: 0%;
   }
   .opacity-50 {
     opacity: 50%;
@@ -705,6 +746,16 @@
   .ease-in-out {
     --tw-ease: var(--ease-in-out);
     transition-timing-function: var(--ease-in-out);
+  }
+  .peer-checked\:visible {
+    &:is(:where(.peer):checked ~ *) {
+      visibility: visible;
+    }
+  }
+  .peer-checked\:opacity-100 {
+    &:is(:where(.peer):checked ~ *) {
+      opacity: 100%;
+    }
   }
   .hover\:rounded-tr-\[20px\] {
     &:hover {
