--- a/src/output.css
+++ b/src/output.css
@@ -7,8 +7,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-50: oklch(98.7% 0.022 95.277);
-    --color-amber-200: oklch(92.4% 0.12 95.746);
+    --color-red-500: oklch(63.7% 0.237 25.331);
+    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-teal-400: oklch(77.7% 0.152 181.912);
     --color-blue-600: oklch(54.6% 0.245 262.881);
@@ -25,18 +25,10 @@
     --spacing: 0.25rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
-    --text-4xl: 2.25rem;
-    --text-4xl--line-height: calc(2.5 / 2.25);
-    --text-5xl: 3rem;
-    --text-5xl--line-height: 1;
-    --text-6xl: 3.75rem;
-    --text-6xl--line-height: 1;
-    --text-7xl: 4.5rem;
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
-    --tracking-tighter: -0.05em;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --blur-2xl: 40px;
     --default-transition-duration: 150ms;
@@ -266,9 +258,6 @@
   .mr-\[1rem\] {
     margin-right: 1rem;
   }
-  .mr-\[2rem\] {
-    margin-right: 2rem;
-  }
   .mr-\[5px\] {
     margin-right: 5px;
   }
@@ -352,9 +341,6 @@
   }
   .w-\[100\%\] {
     width: 100%;
-  }
-  .w-\[100px\] {
-    width: 100px;
   }
   .w-\[200px\] {
     width: 200px;
@@ -453,6 +439,22 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
+  .border-r-\[1px\] {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 1px;
+  }
+  .border-r-\[5px\] {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 5px;
+  }
+  .border-r-\[10\] {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 10;
+  }
+  .border-r-\[10px\] {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 10px;
+  }
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
@@ -460,6 +462,10 @@
   .border-b-\[1px\] {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
+  }
+  .border-l-\[10px\] {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 10px;
   }
   .border-none {
     --tw-border-style: none;
@@ -474,14 +480,23 @@
   .border-gray-200 {
     border-color: var(--color-gray-200);
   }
-  .border-gray-500 {
-    border-color: var(--color-gray-500);
-  }
-  .border-gray-800 {
-    border-color: var(--color-gray-800);
+  .border-red-500 {
+    border-color: var(--color-red-500);
   }
   .border-white {
     border-color: var(--color-white);
+  }
+  .border-r-amber-300 {
+    border-right-color: var(--color-amber-300);
+  }
+  .border-l-\[\#101820\] {
+    border-left-color: #101820;
+  }
+  .border-l-\[\#FEE715\] {
+    border-left-color: #FEE715;
+  }
+  .border-l-amber-300 {
+    border-left-color: var(--color-amber-300);
   }
   .bg-\[\#101820\] {
     background-color: #101820;
@@ -564,9 +579,6 @@
   }
   .px-\[5rem\] {
     padding-inline: 5rem;
-  }
-  .px-\[10px\] {
-    padding-inline: 10px;
   }
   .px-\[10rem\] {
     padding-inline: 10rem;
@@ -667,9 +679,6 @@
   .text-blue-600 {
     color: var(--color-blue-600);
   }
-  .text-gray-500 {
-    color: var(--color-gray-500);
-  }
   .text-gray-600 {
     color: var(--color-gray-600);
   }
@@ -678,9 +687,6 @@
   }
   .text-green-600 {
     color: var(--color-green-600);
-  }
-  .text-teal-400 {
-    color: var(--color-teal-400);
   }
   .text-transparent {
     color: transparent;
@@ -731,11 +737,6 @@
   }
   .transition-colors {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .transition-shadow {
-    transition-property: box-shadow;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
@@ -863,11 +864,6 @@
   .max-\[1310px\]\:text-\[1\.20rem\] {
     @media (width < 1310px) {
       font-size: 1.20rem;
-    }
-  }
-  .max-\[1310px\]\:text-\[1rem\] {
-    @media (width < 1310px) {
-      font-size: 1rem;
     }
   }
   .max-\[700px\]\:hidden {
