--- a/src/output.css
+++ b/src/output.css
@@ -10,17 +10,18 @@
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-green-600: oklch(62.7% 0.194 149.214);
-    --color-teal-400: oklch(77.7% 0.152 181.912);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-violet-700: oklch(49.1% 0.27 292.581);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-300: oklch(87.2% 0.01 258.338);
+    --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-gray-800: oklch(27.8% 0.033 256.848);
+    --color-gray-900: oklch(21% 0.034 264.665);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -310,9 +311,6 @@
   .ml-\[15px\] {
     margin-left: 15px;
   }
-  .ml-\[280px\] {
-    margin-left: 280px;
-  }
   .flex {
     display: flex;
   }
@@ -346,20 +344,11 @@
   .w-\[100\%\] {
     width: 100%;
   }
-  .w-\[100px\] {
-    width: 100px;
-  }
   .w-\[200px\] {
     width: 200px;
   }
-  .w-\[250px\] {
-    width: 250px;
-  }
   .w-\[280px\] {
     width: 280px;
-  }
-  .w-\[290px\] {
-    width: 290px;
   }
   .w-\[300px\] {
     width: 300px;
@@ -429,9 +418,6 @@
   .overflow-hidden {
     overflow: hidden;
   }
-  .rounded {
-    border-radius: 0.25rem;
-  }
   .rounded-\[5px\] {
     border-radius: 5px;
   }
@@ -458,22 +444,6 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
-  .border-r-\[1px\] {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 1px;
-  }
-  .border-r-\[5px\] {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 5px;
-  }
-  .border-r-\[10\] {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 10;
-  }
-  .border-r-\[10px\] {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 10px;
-  }
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
@@ -499,23 +469,14 @@
   .border-gray-200 {
     border-color: var(--color-gray-200);
   }
-  .border-red-500 {
-    border-color: var(--color-red-500);
-  }
   .border-white {
     border-color: var(--color-white);
-  }
-  .border-r-amber-300 {
-    border-right-color: var(--color-amber-300);
   }
   .border-l-\[\#101820\] {
     border-left-color: #101820;
   }
   .border-l-\[\#FEE715\] {
     border-left-color: #FEE715;
-  }
-  .border-l-amber-300 {
-    border-left-color: var(--color-amber-300);
   }
   .bg-\[\#101820\] {
     background-color: #101820;
@@ -644,9 +605,6 @@
   .py-\[20px\] {
     padding-block: 20px;
   }
-  .pt-\[5rem\] {
-    padding-top: 5rem;
-  }
   .text-center {
     text-align: center;
   }
@@ -682,9 +640,6 @@
   .text-\[4rem\] {
     font-size: 4rem;
   }
-  .text-\[5rem\] {
-    font-size: 5rem;
-  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -716,9 +671,6 @@
   .text-gray-200 {
     color: var(--color-gray-200);
   }
-  .text-gray-300 {
-    color: var(--color-gray-300);
-  }
   .text-gray-600 {
     color: var(--color-gray-600);
   }
@@ -749,13 +701,63 @@
   .opacity-80 {
     opacity: 80%;
   }
+  .shadow {
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-md {
+    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-sm {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-gray-100 {
+    --tw-shadow-color: oklch(96.7% 0.003 264.542);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-gray-100) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-gray-200 {
+    --tw-shadow-color: oklch(92.8% 0.006 264.531);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-gray-200) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-gray-300 {
+    --tw-shadow-color: oklch(87.2% 0.01 258.338);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-gray-300) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-gray-400 {
+    --tw-shadow-color: oklch(70.7% 0.022 261.325);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-gray-400) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-gray-500 {
+    --tw-shadow-color: oklch(55.1% 0.027 264.364);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-gray-500) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-gray-800 {
+    --tw-shadow-color: oklch(27.8% 0.033 256.848);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-gray-800) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-gray-900 {
+    --tw-shadow-color: oklch(21% 0.034 264.665);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-gray-900) var(--tw-shadow-alpha), transparent);
+    }
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -901,21 +903,6 @@
       opacity: 70%;
     }
   }
-  .active\:opacity-\[50\] {
-    &:active {
-      opacity: 50;
-    }
-  }
-  .max-\[1160\]\:hidden {
-    @media (width < 1160) {
-      display: none;
-    }
-  }
-  .max-\[1157\]\:hidden {
-    @media (width < 1157) {
-      display: none;
-    }
-  }
   .max-\[1310px\]\:text-\[1\.20rem\] {
     @media (width < 1310px) {
       font-size: 1.20rem;
@@ -924,11 +911,6 @@
   .max-\[1200px\]\:gap-\[10px\] {
     @media (width < 1200px) {
       gap: 10px;
-    }
-  }
-  .max-\[1160px\]\:hidden {
-    @media (width < 1160px) {
-      display: none;
     }
   }
   .max-\[1160px\]\:text-\[0\.90rem\] {
@@ -946,19 +928,9 @@
       grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
-  .max-\[1045px\]\:grid-cols-2 {
-    @media (width < 1045px) {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
   .max-\[800px\]\:hidden {
     @media (width < 800px) {
       display: none;
-    }
-  }
-  .max-\[800px\]\:grid-cols-1 {
-    @media (width < 800px) {
-      grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
   .max-\[700px\]\:hidden {
